// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processBudgetItem helper function Enriches non-EUR currency budget items when date is provided, but no precision, defaults to year precision 1`] = `
Object {
  "_original": Object {
    "currency": "BGN",
    "raw": "63,115.00",
    "value": 63115,
  },
  "currency": "EUR",
  "raw": "EUR 32300",
  "value": 32300,
}
`;

exports[`processBudgetItem helper function Enrichment scenario, daily precision, exchange rate available 1`] = `
Object {
  "_original": Object {
    "currency": "BGN",
    "raw": "63,115.00",
    "value": 63115,
  },
  "currency": "EUR",
  "raw": "EUR 32300",
  "value": 32300,
}
`;

exports[`processBudgetItem helper function Enrichment scenario, daily precision, exchange rate not available, fallback to monthly 1`] = `
Object {
  "_original": Object {
    "currency": "USD",
    "raw": "63,115.00",
    "value": 63115,
  },
  "currency": "EUR",
  "raw": "EUR 51200",
  "value": 51200,
}
`;

exports[`processBudgetItem helper function Enrichment scenario, monthly precision 1`] = `
Object {
  "_original": Object {
    "currency": "BGN",
    "raw": "63,115.00",
    "value": 63115,
  },
  "currency": "EUR",
  "raw": "EUR 32300",
  "value": 32300,
}
`;
